检测设备接口，验证设备接口调整
